@@ -2,11 +2,21 @@
 Name=Pidgin
 Comment=Icon theme for Pidgin tray icons
 Hidden=True
-Directories=16x16/status,22x22/status,32x32/status,48x48/status,scalable/status
+Directories=16x16/actions,16x16/status,22x22/actions,22x22/status,32x32/actions,32x32/status,48x48/actions,48x48/status,scalable/actions,scalable/status
+
+[16x16/actions]
+Size=16
+Context=Actions
+Type=Threshold
 
 [16x16/status]
 Size=16
 Context=Status
+Type=Threshold
+
+[22x22/actions]
+Size=22
+Context=Actions
 Type=Threshold
 
 [22x22/status]
@@ -14,15 +24,32 @@ Size=22
 Context=Status
 Type=Threshold
 
+[32x32/actions]
+Size=32
+Context=Actions
+Type=Threshold
+
 [32x32/status]
 Size=32
 Context=Status
+Type=Threshold
+
+[48x48/actions]
+Size=48
+Context=Actions
 Type=Threshold
 
 [48x48/status]
 Size=48
 Context=Status
 Type=Threshold
+
+[scalable/actions]
+MinSize=1
+Size=128
+MaxSize=256
+Context=Actions
+Type=Scalable
 
 [scalable/status]
 MinSize=1
